fixtures/e2e/todo.txt.d/lists.d/invalid/dir-out-of-range.list
---
name: Out Of Range
description: {{dir:5}} escapes beyond lists.d, so the entire list is invalid and silently ignored
---
project includes {{dir:5}}

sort by priority desc
